--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="theme-color" content="#000000" />
 	<meta
 		name="description"
 		content="Web site created using create-react-app"
@@ -21,7 +20,7 @@
 </head>
 <body style="width: 100%; min-height: 100%; padding: 0; margin: 0; display: flex; flex-direction: column;">
 <noscript>You need to enable JavaScript to run this app.</noscript>
-	<div id="root" style="height: 100%; width: 100%; background: #8a8a8a; flex-grow: 1"></div>
+	<div id="root" style="height: 100%; width: 100%; background: #181818; flex-grow: 1"></div>
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
