--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="font-size: 16px; width: 100%; height: 100%; padding: 0; margin: 0;">
+<html lang="ru" style="font-size: 16px; width: 100%; height: 100%; padding: 0; margin: 0;">
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
